Language inspection was edited in favor of Solidity.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.sol linguist-language=Solidity
+*.css linguist-detectable=false
+*.html linguist-detectable=false
+*.json linguist-detectable=false
